# Icons

./: .gitignore  Makefile.am  README.md  configure.ac  icon.mk
Cube/: Cube.icns  Makefile.am
